; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui.c_gui_attempt_start.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui.c_gui_attempt_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32 }

@gui_attempt_start.recursive = internal global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@gui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [12 x i8] c"builtin_gui\00", align 1
@GDK_CURRENT_TIME = common dso_local global i32 0, align 4
@OK = common dso_local global i64 0, align 8
@VV_WINDOWID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @gui_attempt_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gui_attempt_start() #0 {
  %1 = load i32, i32* @gui_attempt_start.recursive, align 4
  %2 = add nsw i32 %1, 1
  store i32 %2, i32* @gui_attempt_start.recursive, align 4
  %3 = load i32, i32* @TRUE, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 0), align 8
  %4 = call i32 @termcapinit(i32* bitcast ([12 x i8]* @.str to i32*))
  %5 = load i32, i32* @gui_attempt_start.recursive, align 4
  %6 = sub nsw i32 %5, 1
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 0), align 8
  %7 = load i32, i32* @gui_attempt_start.recursive, align 4
  %8 = add nsw i32 %7, -1
  store i32 %8, i32* @gui_attempt_start.recursive, align 4
  ret void
}

declare dso_local i32 @termcapinit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
